# tami_one_agent_lab

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/conversations/: he_relative_smoke.jsonl
data/examples/: example_cases.jsonl  test.jsonl  train.jsonl  val.jsonl
docs/: 00-project-goal.md  01-capability-map.md  02-agent-contract.md  03-evaluation.md  04-operating-procedure.md  05-assumptions.md
eval/: __init__.py  metrics.py  run_eval.py
features/000-template/: 01-brief.md  02-design.md  03-tasks.md
features/001-reminder-agent/: 01-brief.md  02-design.md  03-tasks.md
scripts/: compare_runs.py  generate_examples.py  new_feature.py  verify_stratification.py
src/agent_feature_template/: __init__.py  agent.py  cli.py  render.py  schemas.py  signatures.py
src/agent_feature_template.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_agent.py  test_metrics.py  test_render.py
