[project]
name = "agent-feature-template"
version = "0.1.0"
description = "Markdown-first template for designing, building, and evaluating AI agent features"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "dspy-ai>=2.4",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
